--- a/test.html
+++ b/test.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="uz">
 
@@ -209,11 +208,9 @@
 		</div>
 	</div>
 
-	<script src="test.js"></script>
+	<!-- <script src="test.js"></script> -->
 	<script>
 		// Profile sahifasida tanlangan theme'ni olish
-		const savedTheme = localStorage.getItem("theme") || "light"
-
 		function applyTheme(theme) {
 			document.body.classList.remove('light-theme', 'dark-theme', 'blue-theme')
 			if (theme === 'dark') {
@@ -225,10 +222,20 @@
 			}
 		}
 
-		// Sahifa ochilganda avtomatik qo'llash
-		applyTheme(savedTheme);
+		// Shrift o'lchamini qo'llash
+		function applyFontSize(fontSize) {
+			document.body.style.fontSize =
+				fontSize === 'small' ? '14px' : fontSize === 'medium' ? '16px' : '18px'
+		}
+
+		// LocalStorage'dan theme va fontSize olish
+		const savedTheme = localStorage.getItem('theme') || 'dark'
+		const savedFontSize = localStorage.getItem('fontSize') || 'medium'
+		applyTheme(savedTheme)
+		applyFontSize(savedFontSize)
 	</script>
 </body>
 
 </html>
+
 
