--- a/test.html
+++ b/test.html
@@ -208,7 +208,7 @@
 		</div>
 	</div>
 
-	<!-- <script src="test.js"></script> -->
+	<script src="test.js"></script> 
 	<script>
 		// Profile sahifasida tanlangan theme'ni olish
 		function applyTheme(theme) {
@@ -237,5 +237,6 @@
 </body>
 
 </html>
+
 
 
