--- a/test.html
+++ b/test.html
@@ -229,7 +229,7 @@
 		}
 
 		// LocalStorage'dan theme va fontSize olish
-		const savedTheme = localStorage.getItem('theme') || 'dark'
+		const savedTheme = localStorage.getItem('theme')
 		const savedFontSize = localStorage.getItem('fontSize') || 'medium'
 		applyTheme(savedTheme)
 		applyFontSize(savedFontSize)
@@ -237,6 +237,7 @@
 </body>
 
 </html>
+
 
 
 
